Adds bash as default shell

--- a/json-to-summary/action.yml
+++ b/json-to-summary/action.yml
@@ -16,6 +16,8 @@ runs:
   using: "composite"
   steps:
     - name: Write JSON To Summary
+      id: write-json-to-summary
+      shell: bash
       run: |
         {
           echo '### ${{ inputs.title }}'
