--- a/create-grafana-annotation/action.yml
+++ b/create-grafana-annotation/action.yml
@@ -37,8 +37,8 @@ runs:
 
         RESPONSE_HTTP_CODE=$(
           curl \
-            --write-out "%{http_code}" \
-            -i -X POST ${{ env.GRAFANA_URL }} \
+            --write-out "%{http_code}\n" \
+            -X POST ${{ env.GRAFANA_URL }} \
             --header "Accept: application/json" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${{ inputs.grafana-token }}" \
