Fails workflow on http error

--- a/create-grafana-annotation/action.yml
+++ b/create-grafana-annotation/action.yml
@@ -39,7 +39,7 @@ runs:
           curl \
             -X POST ${{ env.GRAFANA_URL }} \
             --write-out "%{http_code}\n" \
-            -o /dev/null
+            -o /dev/null \
             --header "Accept: application/json" \
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${{ inputs.grafana-token }}" \
@@ -59,7 +59,7 @@ runs:
         if [ "${{ steps.write-annotation-to-grafana.outputs.response-http-code }}" == "200" ]; then
           echo "- Annotation added to Grafana :white_check_mark:" >> "$GITHUB_STEP_SUMMARY"
         else
-          echo "- Failed to add annotation to Grafana :x:" >> "$GITHUB_STEP_SUMMARY"
+          echo "- Failed to add annotation to Grafana (HTTP response: ${{ steps.write-annotation-to-grafana.outputs.response-http-code }}) :x:" >> "$GITHUB_STEP_SUMMARY"
         fi
 
         {
@@ -70,3 +70,7 @@ runs:
           echo "  annotation-url: \"${{ inputs.annotation-url }}\""
           echo "  ```"
         } >> "$GITHUB_STEP_SUMMARY"
+
+        if [ "${{ steps.write-annotation-to-grafana.outputs.response-http-code }}" != "200" ]; then
+          exit 1
+        fi
