--- a/json-to-summary/action.yml
+++ b/json-to-summary/action.yml
@@ -3,7 +3,7 @@ description: |
   This GitHub Action is designed to write JSON content to the workflow summary. 
   It enables you to present structured data in a clear and readable format in the GitHub Actions UI. 
   The action accepts a JSON input and an optional title.
-author: "Digdir Plattform Team"
+author: Digdir Platform Team
 inputs:
   json:
     required: true
@@ -13,7 +13,7 @@ inputs:
     type: string
     default: "JSON"
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Write JSON To Summary
       id: write-json-to-summary
