Extracts JSON helper function to seperate file

--- a/create-grafana-annotation/action.yml
+++ b/create-grafana-annotation/action.yml
@@ -29,24 +29,13 @@ runs:
       env:
         GRAFANA_URL: https://digdir.grafana.net/api/annotations/
       run: |
-        create_json_payload() {
-          local dashboard_id=$1
-          local panel_id=$2
-          local annotation_text=$3
-          local annotation_url=$4
-
-          if [ -n "$annotation_url" ]; then
-              annotation_text="<a href=\"$annotation_url\">$annotation_text</a>"
-          fi
-
-          jq -n \
-              --arg dashboard_id "$dashboard_id" \
-              --arg panel_id "$panel_id" \
-              --arg text "$annotation_text" \
-              '{"dashboardId": $dashboard_id | tonumber, "panelId": $panel_id | tonumber, "text": $text}'
-          }
-
-        ANNOTATION_JSON=$(create_json_payload "${{ inputs.dashboard-id }}" "${{ inputs.panel-id }}" "${{ inputs.annotation-text }}" "${{ inputs.annotation-url }}")
+        ANNOTATION_JSON=$(
+          create_json_payload \
+            "${{ inputs.dashboard-id }}" \
+            "${{ inputs.panel-id }}" \
+            "${{ inputs.annotation-text }}" 
+            "${{ inputs.annotation-url }}"
+        )
 
         RESPONSE_HTTP_CODE=$(
           curl \
