--- a/.github/workflows/run-bats-tests.yml
+++ b/.github/workflows/run-bats-tests.yml
@@ -10,14 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Setup BATS testing framework
+        uses: mig4/setup-bats@v1.2.0
+
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Bats
-        run: |
-          git clone https://github.com/bats-core/bats-core.git
-          cd bats-core
-          ./install.sh /usr/local
 
       - name: Run Bats Tests
         run: bats ./**/*.bats
