--- a/.github/workflows/ci-cd-default.yml
+++ b/.github/workflows/ci-cd-default.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   call-workflow-image-build-publish:
-    uses: build-image.yml
+    uses: ./.github/workflows/build-image.yml
     with:
       java-version: ${{ inputs.java-version }}
       slack-channel-id: ${{ inputs.slack-channel-id }}
@@ -50,7 +50,7 @@ jobs:
     if: ${{ always() && contains(needs.*.result, 'failure') }}
     steps:
       - name: Send Slack notification
-        uses: felleslosninger/github-actions/send-slack-notification@v0.0.3-alpha
+        uses: felleslosninger/github-actions/send-slack-notification@v0.2.1
         with:
           slack-channel-id: ${{ inputs.slack-channel-id }}
           slack-bot-token: ${{ secrets.SLACK_CICD_NOTIFICATION_TOKEN }}
