--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,5 +1,5 @@
-name: Publish release draft
-
+name: Publish release
+run-name: Publishing release ${{github.ref_name}}
 on:
   push:
     tags:
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create Release
-        run: gh release create ${{ github.ref }} --title "${{ github.ref }}" --notes "auto" --draft true
+        run: gh release create ${{github.ref_name}} --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
