Changes path to build-image workflow
Signed-off-by: Sindre Johannessen <sindre.johannessen@digdir.no>

--- a/.github/workflows/ci-cd-default.yml
+++ b/.github/workflows/ci-cd-default.yml
@@ -27,7 +27,7 @@ on:
 
 jobs:
   call-workflow-image-build-publish:
-    uses: ./.github/workflows/build-image.yml
+    uses: felleslosninger/github-actions/.github/workflows/build-image.yml@v0.2.3
     with:
       java-version: ${{ inputs.java-version }}
       slack-channel-id: ${{ inputs.slack-channel-id }}
