Initial changes to testing
Signed-off-by: Sindre Johannessen <sindre.johannessen@digdir.no>

--- a/create-grafana-annotation/action.yml
+++ b/create-grafana-annotation/action.yml
@@ -29,7 +29,7 @@ runs:
       env:
         GRAFANA_URL: https://digdir.grafana.net/api/annotations/
       run: |
-        set -o allexport; source "${{ github.action_path }}/helpers.sh"; set +o allexport;
+        set -o allexport; source "${{ github.action_path }}/create-json-payload.bash"; set +o allexport;
 
         ANNOTATION_JSON=$(
           create_json_payload \
