--- a/.github/workflows/run-bats-tests.yml
+++ b/.github/workflows/run-bats-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Bats Tests
         id: run-bats-tests
         run: |
-          BATS_OUTPUT=$(bats ./**/*.bats)
+          BATS_OUTPUT=$(bats ./test/*.bats)
           BATS_OUTPUT="${BATS_OUTPUT//$'\n'/'%0A'}"
 
           echo "test-results=$BATS_OUTPUT" >> $GITHUB_OUTPUT
