--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-# [submodule "test/test-helper/bats-support"]
-# 	path = test/test-helper/bats-support
-# 	url = https://github.com/ztombol/bats-support
-# [submodule "test/test-helper/bats-assert"]
-# 	path = test/test-helper/bats-assert
-# 	url = https://github.com/ztombol/bats-assert
+[submodule "test/test-helper/bats-support"]
+	path = test/test-helper/bats-support
+	url = https://github.com/ztombol/bats-support
+[submodule "test/test-helper/bats-assert"]
+	path = test/test-helper/bats-assert
+	url = https://github.com/ztombol/bats-assert
