Includes submodules on checkout
Signed-off-by: Sindre Johannessen <sindre.johannessen@digdir.no>

--- a/.github/workflows/run-bats-tests.yml
+++ b/.github/workflows/run-bats-tests.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Checkout code
         id: checkout
         uses: actions/checkout@v4
+        with:
+          submodules: "true"
 
       - name: Run Bats Tests
         id: run-bats-tests
