--- a/.github/workflows/run-bats-tests.yml
+++ b/.github/workflows/run-bats-tests.yml
@@ -3,25 +3,23 @@ name: Run Bats Tests
 on:
   push:
     branches:
-      - main
+      - "*"
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup BATS testing framework
-        id: setup
-        uses: mig4/setup-bats@v1.2.0
-
       - name: Checkout code
         id: checkout
         uses: actions/checkout@v4
+        with:
+          submodules: "true"
 
       - name: Run Bats Tests
         id: run-bats-tests
         run: |
-          BATS_OUTPUT=$(bats ./**/*.bats)
+          BATS_OUTPUT=$(./test/bats/bin/bats ./test/*.bats)
           BATS_OUTPUT="${BATS_OUTPUT//$'\n'/'%0A'}"
 
           echo "test-results=$BATS_OUTPUT" >> $GITHUB_OUTPUT
