--- a/write-to-influxdb/action.yml
+++ b/write-to-influxdb/action.yml
@@ -1,13 +1,24 @@
-name: "Hello World"
-description: "Greet someone and record the time"
+name: 'The name of your action here'
+description: 'Provide a description here'
+author: 'Your name or organization here'
+
+# Add your action's branding here. This will appear on the GitHub Marketplace.
+branding:
+  icon: 'heart'
+  color: 'red'
+
+# Define your inputs here.
 inputs:
-  who-to-greet: # id of input
-    description: "Who to greet"
+  milliseconds:
+    description: 'Your input description here'
     required: true
-    default: "World"
+    default: '1000'
+
+# Define your outputs here.
 outputs:
-  time: # id of output
-    description: "The time we greeted you"
+  time:
+    description: 'Your output description here'
+
 runs:
-  using: "node20"
-  main: "dist/index.js"
+  using: node20
+  main: dist/index.js
