--- a/write-to-influxdb/package.json
+++ b/write-to-influxdb/package.json
@@ -66,7 +66,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@influxdata/influxdb-client": "^1.33.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
