--- a/write-to-influxdb/action.yml
+++ b/write-to-influxdb/action.yml
@@ -7,6 +7,23 @@ inputs:
   json:
     description: "Tags and fields data"
     required: true
+  precision:
+    default: "ns"
+  influxdb-url:
+    type: string
+    required: true
+  influxdb-token:
+    type: string
+    required: true
+  organization:
+    type: string
+    required: true
+  bucket:
+    type: string
+    required: true
+  measurement-name:
+    type: string
+    required: true
 
 # Define your outputs here.
 outputs:
