--- a/write-to-influxdb/.github/linters/tsconfig.json
+++ b/write-to-influxdb/.github/linters/tsconfig.json
@@ -4,6 +4,6 @@
   "compilerOptions": {
     "noEmit": true
   },
-  "include": ["../../__tests__/**/*", "../../src/**/*"],
+  "include": ["../../__tests__/**/*", "../../src/**/*", "../../__mocks__/**/*"],
   "exclude": ["../../dist", "../../node_modules", "../../coverage", "*.json"]
 }
