Adds index files for modules to improve imports
Signed-off-by: Sindre Johannessen <sindre.johannessen@digdir.no>

--- a/write-to-influxdb/package.json
+++ b/write-to-influxdb/package.json
@@ -63,6 +63,9 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "./src/**"
+    ],
+    "coveragePathIgnorePatterns": [
+      "./src/interfaces/"
     ]
   },
   "dependencies": {
