--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: .node-version
+          node-version-file: ${{ matrix.folder }}/.node-version
           cache: npm
 
       - name: Install Dependencies
