--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -36,10 +36,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: ${{ matrix.folder }}/.node-version
+          cache-dependency-path: ${{ matrix.folder }}/package-lock.json
           cache: npm
 
       - name: Install Dependencies
         run: npm ci
+        working-directory: ${{ matrix.folder }}
 
       - name: Lint Codebase
         uses: super-linter/super-linter/slim@v5
