Fix to only lint the app folder
Signed-off-by: Sindre Johannessen <sindre.johannessen@digdir.no>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,5 +52,6 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JAVASCRIPT_STANDARD: false
           VALIDATE_JSCPD: false
+          FILTER_REGEX_INCLUDE: .*${{ matrix.folder }}.*
         with:
           args: ${{ matrix.folder }}
