--- a/write-to-influxdb/action.yml
+++ b/write-to-influxdb/action.yml
@@ -5,24 +5,30 @@ author: "Digdir Platform Team"
 # Define your inputs here.
 inputs:
   json:
-    description: "Tags and fields data"
+    description: "Tags and fields data to be written to InfluxDB"
     required: true
   influxdb-url:
+    description: "The URL of the InfluxDB instance where data will be"
     type: string
     required: true
   influxdb-token:
+    description: "The InfluxDB authentication token"
     type: string
     required: true
   organization:
+    description: "The organization name within InfluxDB"
     type: string
     required: true
   bucket:
+    description: "The name of the bucket in InfluxDB where data will be stored"
     type: string
     required: true
   measurement-name:
+    description: "The name of the measurement in InfluxDB"
     type: string
     required: true
   precision:
+    description: "The precision of the timestamps in the data. Default is "ns" (nanoseconds)"
     default: "ns"
 
 # Define your outputs here.
