--- a/github-app-token/package.json
+++ b/github-app-token/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@octokit/app": "^14.0.2"
   },
   "devDependencies": {
