--- a/send-slack-notification/action.yml
+++ b/send-slack-notification/action.yml
@@ -11,6 +11,34 @@ inputs:
   slack-bot-token:
     type: string
     required: true
+  failed:
+    type: string
+    required: false
+    default: "false"
+  application-name:
+    type: string
+    required: false
+  environment:
+    type: string
+    required: false
+  product:
+    type: string
+    required: false
+  jira-id:
+    type: string
+    required: false
+  version:
+    type: string
+    required: false
+  repository:
+    type: string
+    required: false
+  pr-number:
+    type: string
+    required: false
+  initiated-by:
+    type: string
+    required: false
 
 runs:
   using: composite
@@ -31,9 +59,11 @@ runs:
           const message = Utils.getCommitMessage(${{ toJson(github) }});
           return message;
 
-    - name: Notify
-      if: ${{ inputs.slack-channel-id != '' }}
-      id: slack
+    - name: Notify on failure
+      if: |
+        inputs.slack-channel-id != '' && 
+        inputs.failed == 'true'
+      id: notify-on-failure
       uses: slackapi/slack-github-action@v1.25.0
       env:
         SLACK_BOT_TOKEN: ${{ inputs.slack-bot-token }}
@@ -84,3 +114,75 @@ runs:
               }
             ]
           }
+
+    - name: Notify on success
+        uses: slackapi/slack-github-action@v1.25.0
+        if: |
+          inputs.slack-channel-id != '' &&
+          inputs.failed == 'false'
+        with:
+          channel-id: ${{ inputs.slack-channel-id }}
+          payload: |
+            {
+              "text": "Successfully deployed",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":large_green_circle: Application successfully deployed"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Application name:*\n${{ inputs.application-name }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Environment:*\n${{ inputs.environment }}"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Product:*\n${{ inputs.product }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Jira id:*\n<https://digdir.atlassian.net/browse/${{ inputs.jira-id }}|${{ inputs.jira-id }}>"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Version:*\n${{ inputs.version }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Application PR:*\n<https://github.com/${{ inputs.repository }}/pull/${{ inputs.pr-number }}|#${{ inputs.pr-number }}>"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Initiated by:*\n${{ inputs.initiated-by }}"
+                    }
+                  ]
+                },
+                {
+                  "type": "divider"
+                }
+              ]
+            }
