--- a/github-app-token/package.json
+++ b/github-app-token/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "write-to-influxdb",
-  "description": "GitHub Action to write data to InlfuxDB",
+  "name": "github-app-token",
+  "description": "GitHub Action to create Github App Token",
   "version": "1.0.0",
   "author": "Digdir Platform Team",
   "private": true,
@@ -70,7 +70,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@influxdata/influxdb-client": "^1.33.2"
+    "@actions/github": "^6.0.0",
+    "@octokit/app": "^14.0.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
