Sets workflow permissions

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -29,6 +29,9 @@ on:
       image-digest:
         description: "Docker image SHA256 digest"
         value: ${{ jobs.build-publish-image.outputs.imagedigest }}
+
+permissions: read-all
+
 jobs:
   build-publish-image:
     runs-on: ubuntu-latest
