--- a/.github/workflows/ci-cd-default.yml
+++ b/.github/workflows/ci-cd-default.yml
@@ -25,6 +25,8 @@ on:
         type: string
         required: true
 
+permissions: read-all
+
 jobs:
   call-workflow-image-build-publish:
     uses: felleslosninger/github-actions/.github/workflows/build-image.yml@v0.5.2
