Ignore dist folder when running super-linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,6 +21,9 @@ permissions:
   packages: read
   statuses: write
 
+env:
+  FILTER_REGEX_EXCLUDE: .*dist/.*
+
 jobs:
   lint:
     name: Lint Codebase
