--- a/.github/workflows/run-jest-tests.yml
+++ b/.github/workflows/run-jest-tests.yml
@@ -44,5 +44,9 @@ jobs:
           cache-dependency-path: ${{ matrix.folder }}/package-lock.json
           cache: npm
 
+      - name: Install Dependencies
+        run: npm ci
+        working-directory: ${{ matrix.folder }}
+
       - run: npm run test
         working-directory: ${{ matrix.folder }}
