--- a/publish-release-notes/package.json
+++ b/publish-release-notes/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.16",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
