Revert "Removes SHA input (#32)"
This reverts commit 58567d207e1a7f515b2a1b9a45af5f463dfca424.

--- a/publish-release-notes/action.yml
+++ b/publish-release-notes/action.yml
@@ -35,6 +35,10 @@ inputs:
   event-type:
     required: true
     type: string
+  sha:
+    description: Sha of application commit
+    required: false
+    type: string
   ignore-products:
     description: Product(s) to ignore when publishing release notes
     required: false
