--- a/.github/workflows/internal-run-jest-tests.yml
+++ b/.github/workflows/internal-run-jest-tests.yml
@@ -6,6 +6,7 @@ on:
       - "write-to-influxdb/**"
       - "github-app-token/**"
       - "publish-release-notes/**"
+      - "get-release-notes/**"
       # Add more folders as needed
   push:
     branches:
@@ -14,6 +15,7 @@ on:
       - "write-to-influxdb/**"
       - "github-app-token/**"
       - "publish-release-notes/**"
+      - "get-release-notes/**"
       # Add more folders as needed
 
 permissions: read-all
@@ -28,6 +30,7 @@ jobs:
           - "write-to-influxdb/"
           - "github-app-token/"
           - "publish-release-notes/"
+          - "get-release-notes/**"
           # Add more folders as needed
 
     steps:
