--- a/.github/workflows/internal-run-jest-tests.yml
+++ b/.github/workflows/internal-run-jest-tests.yml
@@ -30,7 +30,7 @@ jobs:
           - "write-to-influxdb/"
           - "github-app-token/"
           - "publish-release-notes/"
-          - "get-release-notes/**"
+          - "get-release-notes/"
           # Add more folders as needed
 
     steps:
