--- a/send-slack-notification/action.yml
+++ b/send-slack-notification/action.yml
@@ -44,18 +44,12 @@ runs:
   using: composite
 
   steps:
-    - name: Checkout JS Tools
-      uses: actions/checkout@v4
-      with:
-        repository: felleslosninger/github-workflows
-        path: tools
-
     - name: Get commit message
       id: commit-message
       uses: actions/github-script@v7
       with:
         script: |
-          const Utils = require('./tools/.github/js/github-context-utils.js');
+          const Utils = require('./tools/github-context-utils.js');
           const message = Utils.getCommitMessage(${{ toJson(github) }});
           return message;
 
