--- a/send-slack-notification/action.yml
+++ b/send-slack-notification/action.yml
@@ -44,6 +44,13 @@ runs:
   using: composite
 
   steps:
+    - name: Checkout JS Tools
+      uses: actions/checkout@v4
+      with:
+        sparse-checkout: |
+          send-slack-notification/tools
+        path: tools
+
     - name: Get commit message
       id: commit-message
       uses: actions/github-script@v7
