--- a/send-slack-notification/action.yml
+++ b/send-slack-notification/action.yml
@@ -46,13 +46,18 @@ runs:
   steps:
     - name: Checkout JS Tools
       uses: actions/checkout@v4
+      with:
+        repository: felleslosninger/github-actions
+        sparse-checkout: |
+          send-slack-notification/tools
+        path: tools
 
     - name: Get commit message
       id: commit-message
       uses: actions/github-script@v7
       with:
         script: |
-          const Utils = require('./send-slack-notification/tools/github-context-utils.js');
+          const Utils = require('./tools/github-context-utils.js');
           const message = Utils.getCommitMessage(${{ toJson(github) }});
           return message;
 
