--- a/send-slack-notification/action.yml
+++ b/send-slack-notification/action.yml
@@ -44,18 +44,21 @@ runs:
   using: composite
 
   steps:
-    - name: Checkout JS Tools
+    - name: Checkout tools
       uses: actions/checkout@v4
       with:
-        repository: felleslosninger/github-workflows
-        path: tools
+        repository: felleslosninger/github-actions
+        sparse-checkout: |
+          send-slack-notification/tools/github-context-utils.js
+        sparse-checkout-cone-mode: false
+        ref: remove-external-dependency
 
     - name: Get commit message
       id: commit-message
       uses: actions/github-script@v7
       with:
         script: |
-          const Utils = require('./tools/.github/js/github-context-utils.js');
+          const Utils = require('./send-slack-notification/tools/github-context-utils.js');
           const message = Utils.getCommitMessage(${{ toJson(github) }});
           return message;
 
